--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "html-pdf": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.7",
+    "phantomjs-prebuilt": "^2.1.13",
+    "puppeteer": "^8.0.0",
     "sequelize": "^6.5.0",
     "sequelize-cli": "^6.2.0"
   }
